--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
     <h2>5. Contact</h2>
     <p>
-      For any inquiries about this policy, you may contact the developers at:<br>
+      For any inquiries about this policy, you may contact the developer at:<br>
       <strong>support@yumwords.com</strong>
     </p>
   </div>
